@@ -3,6 +3,7 @@ Pending changes in the mainline
 
 * New metadata automatically computed at the instance level: "PixelDataOffset"
 * Fix build on big-endian architectures
+* Possibility to generate a static library containing the Orthanc Framework
 
 
 Version 1.9.0 (2021-01-29)
